refactor: add testcontainers and improve tests (#116)
* refactor: WIP Add integration tests using Testcontainers

* refactor: use of test containers in IT

* refactor: WIP activity bean it using testcontainer

* refactor: move Bill, Offer and ActivityImageUploader UTs to Core

* refactor: test container fixed on port

* refactor: remove unused classes and resources linked to them

* refactor: tests change because database structure changed

* refactor: remove test module and move test to other modules.
Improve tests.

* tests: fix failing test in ActivityBean

* tests: fix offerbean test context and mocks

* fix: file enconding

* chore: add ddbb dependency from tntapi

* chore: deleted sample data sql

---------

Co-authored-by: Cristian Bahamonde <cristian.bahamonde.santamaria@gmail.com>
Co-authored-by: Gabriel Costanza <costanzag1999@gmail.com>
Co-authored-by: David Martín <david.martin@autentia.com>